--- a/hsm/hsm_index.html
+++ b/hsm/hsm_index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="card">
       <h1>하성민</h1>
-      <p>왕왕왕초보개발자</p>
+      <p>초보개발자입니다.</p>
 
       <h2>취미</h2>
       <ul>
