--- a/hsm/hsm_index.html
+++ b/hsm/hsm_index.html
@@ -1,28 +1,39 @@
 <!doctype html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>개인 자기소개</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="hsm_style.css" />
   </head>
   <body>
-    <div class="card">
-      <h1>하성민</h1>
-      <p>초보개발자입니다.</p>
+    <header>
+      <nav>
+        <a class="logo" href="../index.html">TEAM2</a>
+      </nav>
+    </header>
+    <main>
+      <article>
+        <h1>하성민</h1>
+        <p>왕초보개발자 하성민입니다.</p>
 
-      <h2>취미</h2>
-      <ul>
-        <li>취미1 작성</li>
-        <li>취미2 작성</li>
-        <li>취미3 작성</li>
-        <!-- 추가할 내용 있다면 추가하시면 될 것 같습니다. -->
-      </ul>
+        <h2>취미</h2>
+        <ul>
+          <li>게임</li>
+          <li>웹툰 감상</li>
+          <li>애니메이션 감상</li>
+        </ul>
 
-      <h4>팀원에게 한마디</h4>
-      <p>느리고 질문이 많은 저라도 잘 부탁드립니다.</p>
+        <h4>팀원에게 한마디</h4>
+        <p>저희 더 친해져요~</p>
 
-      <h4>첫 협업 느낀점</h4>
-      <p>팀장님과 팀원들의 중요성을 다시 한 번 느꼈습니다.</p>
-    </div>
+        <h4>첫 협업 느낀점</h4>
+        <p>
+          좋은 팀원분들 덕에 어려움을 크게 느끼지 않고 진행한 것 같습니다.
+          감사합니다!
+        </p>
+      </article>
+    </main>
   </body>
 </html>
