--- a/index.html
+++ b/index.html
@@ -1,43 +1,61 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>자기소개 메인페이지</title>
-    <link rel="stylesheet" href="reset.css">
-</head>
-<body>
+    <link rel="stylesheet" href="reset.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <h1><a href="/">TEAM2</a></h1>
-            <ul>
-                <li><a href="">HSM</a></li>
-                <li><a href="">JMJ</a></li>
-                <li><a href="">KNJ</a></li>
-                <li><a href="">KSH</a></li>
-                <li><a href="">YSJ</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <h1><a href="/">TEAM2</a></h1>
+        <ul>
+          <li><a href="">HSM</a></li>
+          <li><a href="">JMJ</a></li>
+          <li><a href="">KNJ</a></li>
+          <li><a href="">KSH</a></li>
+          <li><a href="">YSJ</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section>
+      <h2>팀원 소개</h2>
+      <a href="hsm/hsm_index.html">
+        <div>
+          <img src="" alt="HSM 사진" width="120" />
+          <h3>HSM</h3>
+          <p>왕왕왕초보개발자</p>
+        </div>
+      </a>
 
-        </section>
-        <section>
+      <!-- JMJ -->
+      <a href="jmj/jmj_index.html">
+        <div>
+          <img src="" alt="JMJ 사진" width="120" />
+          <h3>JMJ</h3>
+          <p>한 줄 소개</p>
+        </div>
+      </a>
 
-        </section>
-        <section>
+      <!-- KNJ -->
+      <a href="knj/knj_index.html">
+        <div>
+          <img src="" alt="KNJ 사진" width="120" />
+          <h3>KNJ</h3>
+          <p>한 줄 소개</p>
+        </div>
+      </a>
 
-        </section>
-        <section>
-
-        </section>
-        <section>
-
-        </section>
+      <!-- YSJ -->
+      <a href="ysj/ysj_index.html">
+        <div>
+          <img src="" alt="KNJ 사진" width="120" />
+          <h3>KNJ</h3>
+          <p>한 줄 소개</p>
+        </div>
+      </a>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
