윤소정님 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <!-- YSJ -->
       <a href="ysj/ysj_index.html">
         <div>
-          <img src="" alt="KNJ 사진" width="120" />
-          <h3>KNJ</h3>
+          <img src="" alt="YSJ 사진" width="120" />
+          <h3>YSJ</h3>
           <p>한 줄 소개</p>
         </div>
       </a>
