메인페이지 프로필 사진

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>팀원 소개</h2>
       <a href="hsm/hsm_index.html">
         <div>
-          <img src="" alt="HSM 사진" width="120" />
+          <img src="./resources/hsm_profile.png" alt="HSM 사진" width="120" />
           <h3>HSM</h3>
           <p>왕왕왕초보개발자</p>
         </div>
@@ -32,7 +32,12 @@
       <!-- JMJ -->
       <a href="jmj/jmj_index.html">
         <div>
-          <img src="" alt="JMJ 사진" width="120" />
+          <img
+            src="./resources/jmj_profile.png"
+            alt="JMJ 사진"
+            width="150"
+            height="150px"
+          />
           <h3>JMJ</h3>
           <p>한 줄 소개</p>
         </div>
@@ -41,7 +46,26 @@
       <!-- KNJ -->
       <a href="knj/knj_index.html">
         <div>
-          <img src="" alt="KNJ 사진" width="120" />
+          <img
+            src="./resources/knj_profile.png"
+            alt="KNJ 사진"
+            width="150"
+            height="150px"
+          />
+          <h3>KNJ</h3>
+          <p>한 줄 소개</p>
+        </div>
+      </a>
+
+      <!-- KSH -->
+      <a href="knj/knj_index.html">
+        <div>
+          <img
+            src="./resources/ksh_profile.png"
+            alt="KNJ 사진"
+            width="150"
+            height="150px"
+          />
           <h3>KNJ</h3>
           <p>한 줄 소개</p>
         </div>
@@ -50,9 +74,14 @@
       <!-- YSJ -->
       <a href="ysj/ysj_index.html">
         <div>
-          <img src="" alt="YSJ 사진" width="120" />
+          <img
+            src="./resources/ysj_profile.png"
+            alt="YSJ 사진"
+            width="150"
+            height="150px"
+          />
           <h3>YSJ</h3>
-          <p>한 줄 소개</p>
+          <p>안녕하세요! 풀스택 개발자 윤소정입니다.</p>
         </div>
       </a>
     </main>
