성현, 소정 footer 작성

--- a/ysj/ysj_index.html
+++ b/ysj/ysj_index.html
@@ -1,40 +1,57 @@
 <!doctype html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title>자기소개</title>
-    <link rel="stylesheet" href="../reset.css" />
-    <link rel="stylesheet" href="ysj.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a class="logo" href="../index.html">TEAM2</a>
-      </nav>
-    </header>
 
-    <article class="card">
-      <h1 class="title">윤소정</h1>
-      <p>
-        안녕하세요. 저는 03년생 풀스택 개발자 윤소정이라고 합니다! ( •̀ .̫ •́ )✧
-      </p>
+<head>
+  <meta charset="UTF-8" />
+  <title>자기소개</title>
+  <link rel="stylesheet" href="../reset.css" />
+  <link rel="stylesheet" href="ysj.css" />
+</head>
 
-      <h2>취미</h2>
-      <ul>
-        <li>ott 시청</li>
-        <li>운동</li>
-        <li>게임</li>
-      </ul>
+<body>
+  <header>
+    <nav>
+      <a class="logo" href="../index.html">TEAM2</a>
+    </nav>
+  </header>
 
-      <h4>팀원에게 한마디</h4>
-      <p>여러분과 함께 좋은 결과물을 만들어낼 수 있도록 열심히 하겠습니다.</p>
-      <p>앞으로도 잘부탁드립니다!!</p>
+  <article class="card">
+    <h1 class="title">윤소정</h1>
+    <p>
+      안녕하세요. 저는 03년생 풀스택 개발자 윤소정이라고 합니다! ( •̀ .̫ •́ )✧
+    </p>
 
-      <h4>첫 협업 느낀점</h4>
-      <p>
-        간단한 프로젝트를 통해 팀원분들과 협업하여 깃허브 사용법 익힐 수 있어서
-        좋았습니다.
-      </p>
-    </article>
-  </body>
+    <h2>취미</h2>
+    <ul>
+      <li>ott 시청</li>
+      <li>운동</li>
+      <li>게임</li>
+    </ul>
+
+    <h4>팀원에게 한마디</h4>
+    <p>여러분과 함께 좋은 결과물을 만들어낼 수 있도록 열심히 하겠습니다.</p>
+    <p>앞으로도 잘부탁드립니다!!</p>
+
+    <h4>첫 협업 느낀점</h4>
+    <p>
+      간단한 프로젝트를 통해 팀원분들과 협업하여 깃허브 사용법 익힐 수 있어서
+      좋았습니다.
+    </p>
+  </article>
+</body>
+<footer class="footer">
+  <div class="footer__inner">
+    <div>
+      ⓒ 2026. Sojung Yoon All rights reserved.
+    </div>
+    <div class="footer__sns" aria-label="social links">
+
+      <a class="footer__sns-link" href="https://github.com/soooob43" target="_blank" rel="nooperner noreferrer"
+        aria-label="Github">
+        <img src="github_icon.png" alt="footer-sns-icon" />
+      </a>
+    </div>
+  </div>
+</footer>
+
 </html>
