--- a/ksh/ksh_index.html
+++ b/ksh/ksh_index.html
@@ -6,18 +6,20 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>개인 자기소개</title>
+	<link rel="stylesheet" href="../reset.css" />
 	<link rel="stylesheet" href="ksh_style.css" />
+
 </head>
 
 <body>
 	<header>
-		<nav id="GNB">
-			<div id="logo" onclick="location.href = '../index.html'">TEAM2</div>
+		<nav>
+			<a class="logo" onclick href="../index.html">TEAM2</a>
 		</nav>
 	</header>
 	<main>
-		<article>
-			<h1>김성현</h1>
+		<article class="card">
+			<h1 class="title">김성현</h1>
 			<p>상상을 구현할 수 있는 개발자가 되자</p>
 
 			<h2>취미</h2>
@@ -38,10 +40,23 @@
 			</p>
 		</article>
 	</main>
-	<!-- 추가할 내용 있다면 추가하시면 될 것 같습니다. -->
 
 
 
 </body>
+<footer class="footer">
+	<div class="footer__inner">
+		<div>
+			ⓒ 2026. Seonghyeon Kim All rights reserved.
+		</div>
+		<div class="footer__sns" aria-label="social links">
+
+			<a class="footer__sns-link" href="https://github.com/Obebe-creator" target="_blank"
+				rel="nooperner noreferrer" aria-label="Github">
+				<img src="github_icon.png" alt="footer-sns-icon" />
+			</a>
+		</div>
+	</div>
+</footer>
 
 </html>
