--- a/index.html
+++ b/index.html
@@ -21,38 +21,59 @@
     </header>
     <main>
       <h2>팀원 소개</h2>
+
+      <!-- HSM -->
       <a href="hsm/hsm_index.html">
-        <div>
-          <img src="" alt="HSM 사진" width="120" />
-          <h3>HSM</h3>
-          <p>왕왕왕초보개발자</p>
+        <div class="card">
+          <img src="" alt="HSM 사진" />
+          <div class="card-text">
+            <h3>HSM</h3>
+            <p>왕왕왕초보개발자</p>
+          </div>
         </div>
       </a>
 
       <!-- JMJ -->
       <a href="jmj/jmj_index.html">
-        <div>
-          <img src="" alt="JMJ 사진" width="120" />
-          <h3>JMJ</h3>
-          <p>한 줄 소개</p>
+        <div class="card">
+          <img src="" alt="JMJ 사진" />
+          <div class="card-text">
+            <h3>JMJ</h3>
+            <p>한 줄 소개</p>
+          </div>
         </div>
       </a>
 
       <!-- KNJ -->
       <a href="knj/knj_index.html">
-        <div>
-          <img src="" alt="KNJ 사진" width="120" />
-          <h3>KNJ</h3>
-          <p>한 줄 소개</p>
+        <div class="card">
+          <img src="" alt="KNJ 사진" />
+          <div class="card-text">
+            <h3>KNJ</h3>
+            <p>한 줄 소개</p>
+          </div>
+        </div>
+      </a>
+
+      <!-- KSH -->
+      <a href="ksh/ksh_index.html">
+        <div class="card">
+          <img src="" alt="KSH 사진" />
+          <div class="card-text">
+            <h3>KSH</h3>
+            <p>한 줄 소개</p>
+          </div>
         </div>
       </a>
 
       <!-- YSJ -->
       <a href="ysj/ysj_index.html">
-        <div>
-          <img src="" alt="KNJ 사진" width="120" />
-          <h3>KNJ</h3>
-          <p>한 줄 소개</p>
+        <div class="card">
+          <img src="" alt="YSJ 사진" />
+          <div class="card-text">
+            <h3>YSJ</h3>
+            <p>한 줄 소개</p>
+          </div>
         </div>
       </a>
     </main>
