--- a/hsm/hsm_index.html
+++ b/hsm/hsm_index.html
@@ -1,39 +1,57 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../reset.css" />
-    <link rel="stylesheet" href="hsm_style.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a class="logo" href="../index.html">TEAM2</a>
-      </nav>
-    </header>
-    <main>
-      <article>
-        <h1>하성민</h1>
-        <p>왕초보개발자 하성민입니다.</p>
 
-        <h2>취미</h2>
-        <ul>
-          <li>게임</li>
-          <li>웹툰 감상</li>
-          <li>애니메이션 감상</li>
-        </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>자기소개서</title>
+  <link rel="stylesheet" href="../reset.css" />
+  <link rel="stylesheet" href="hsm_style.css" />
+</head>
 
-        <h4>팀원에게 한마디</h4>
-        <p>저희 더 친해져요~</p>
+<body>
+  <header>
+    <nav>
+      <a class="logo" href="../index.html">TEAM2</a>
+    </nav>
+  </header>
+  <main>
+    <article class="card">
+      <h1 class="title">하성민</h1>
+      <p>왕초보개발자 하성민입니다.</p>
 
-        <h4>첫 협업 느낀점</h4>
-        <p>
-          좋은 팀원분들 덕에 어려움을 크게 느끼지 않고 진행한 것 같습니다.
-          감사합니다!
-        </p>
-      </article>
-    </main>
-  </body>
+      <h2>취미</h2>
+      <ul>
+        <li>게임</li>
+        <li>웹툰 감상</li>
+        <li>애니메이션 감상</li>
+      </ul>
+
+      <h4>팀원에게 한마디</h4>
+      <p>저희 더 친해져요~</p>
+
+      <h4>첫 협업 느낀점</h4>
+      <p>
+        좋은 팀원분들 덕에 어려움을 크게 느끼지 않고 진행한 것 같습니다.
+        감사합니다!
+      </p>
+    </article>
+  </main>
+</body>
+
+<footer class="footer">
+  <div class="footer__inner">
+    <div>
+      ⓒ 2026. Seongmin Ha All rights reserved.
+    </div>
+    <div class="footer__sns" aria-label="social links">
+
+      <a class="footer__sns-link" href="https://github.com/SeongminHa-Jack" target="_blank" rel="nooperner noreferrer"
+        aria-label="Github">
+        <img src="github_icon.png" alt="footer-sns-icon" />
+      </a>
+    </div>
+  </div>
+</footer>
+
 </html>
