yoonsj_ 메인페이지 수정

--- a/index.html
+++ b/index.html
@@ -7,67 +7,35 @@
     <link rel="stylesheet" href="reset.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <h1><a href="/">TEAM2</a></h1>
-        <ul>
-          <li><a href="">HSM</a></li>
-          <li><a href="">JMJ</a></li>
-          <li><a href="">KNJ</a></li>
-          <li><a href="">KSH</a></li>
-          <li><a href="">YSJ</a></li>
-        </ul>
-      </nav>
-    </header>
     <main>
       <h2>팀원 소개</h2>
 
       <!-- HSM -->
       <a href="hsm/hsm_index.html">
-<<<<<<< HEAD
         <div class="card">
-          <img src="" alt="HSM 사진" />
+          <img src="./resources/hsm_profile.png" alt="HSM 사진" />
           <div class="card-text">
             <h3>HSM</h3>
             <p>왕왕왕초보개발자</p>
           </div>
-=======
-        <div>
-          <img src="./resources/hsm_profile.png" alt="HSM 사진" width="120" />
-          <h3>HSM</h3>
-          <p>왕왕왕초보개발자</p>
->>>>>>> 5f5b6c9a954da73d8efeb2f1edde8b96b98f4471
         </div>
       </a>
 
       <!-- JMJ -->
       <a href="jmj/jmj_index.html">
-<<<<<<< HEAD
         <div class="card">
-          <img src="" alt="JMJ 사진" />
+          <img src="./resources/jmj_profile.png" alt="JMJ 사진" />
           <div class="card-text">
             <h3>JMJ</h3>
             <p>한 줄 소개</p>
           </div>
-=======
-        <div>
-          <img
-            src="./resources/jmj_profile.png"
-            alt="JMJ 사진"
-            width="150"
-            height="150px"
-          />
-          <h3>JMJ</h3>
-          <p>한 줄 소개</p>
->>>>>>> 5f5b6c9a954da73d8efeb2f1edde8b96b98f4471
         </div>
       </a>
 
       <!-- KNJ -->
       <a href="knj/knj_index.html">
-<<<<<<< HEAD
         <div class="card">
-          <img src="" alt="KNJ 사진" />
+          <img src="./resources/knj_profile.png" alt="KNJ 사진" />
           <div class="card-text">
             <h3>KNJ</h3>
             <p>한 줄 소개</p>
@@ -78,7 +46,7 @@
       <!-- KSH -->
       <a href="ksh/ksh_index.html">
         <div class="card">
-          <img src="" alt="KSH 사진" />
+          <img src="./resources/ksh_profile.png" alt="KSH 사진" />
           <div class="card-text">
             <h3>KSH</h3>
             <p>한 줄 소개</p>
@@ -89,50 +57,11 @@
       <!-- YSJ -->
       <a href="ysj/ysj_index.html">
         <div class="card">
-          <img src="" alt="YSJ 사진" />
+          <img src="./resources/ysj_profile.png" alt="YSJ 사진" />
           <div class="card-text">
             <h3>YSJ</h3>
-            <p>한 줄 소개</p>
+            <p>안녕하세요! 풀스택 개발자 윤소정입니다.</p>
           </div>
-=======
-        <div>
-          <img
-            src="./resources/knj_profile.png"
-            alt="KNJ 사진"
-            width="150"
-            height="150px"
-          />
-          <h3>KNJ</h3>
-          <p>한 줄 소개</p>
-        </div>
-      </a>
-
-      <!-- KSH -->
-      <a href="knj/knj_index.html">
-        <div>
-          <img
-            src="./resources/ksh_profile.png"
-            alt="KNJ 사진"
-            width="150"
-            height="150px"
-          />
-          <h3>KNJ</h3>
-          <p>한 줄 소개</p>
->>>>>>> 5f5b6c9a954da73d8efeb2f1edde8b96b98f4471
-        </div>
-      </a>
-
-      <!-- YSJ -->
-      <a href="ysj/ysj_index.html">
-        <div>
-          <img
-            src="./resources/ysj_profile.png"
-            alt="YSJ 사진"
-            width="150"
-            height="150px"
-          />
-          <h3>YSJ</h3>
-          <p>안녕하세요! 풀스택 개발자 윤소정입니다.</p>
         </div>
       </a>
     </main>
