--- a/index.html
+++ b/index.html
@@ -1,70 +1,73 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>자기소개 메인페이지</title>
-    <link rel="stylesheet" href="reset.css" />
-  </head>
-  <body>
-    <main>
-      <h2>팀원 소개</h2>
 
-      <!-- HSM -->
-      <a href="hsm/hsm_index.html">
-        <div class="card">
-          <img src="./resources/hsm_profile.png" alt="HSM 사진" />
-          <div class="card-text">
-            <h3>HSM</h3>
-            <p>왕왕왕초보개발자</p>
-          </div>
-        </div>
-      </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>자기소개 메인페이지</title>
+  <link rel="stylesheet" href="reset.css" />
+</head>
 
-      <!-- JMJ -->
-      <a href="jmj/jmj_index.html">
-        <div class="card">
-          <img src="./resources/jmj_profile.png" alt="JMJ 사진" />
-          <div class="card-text">
-            <h3>JMJ</h3>
-            <p>한 줄 소개</p>
-          </div>
-        </div>
-      </a>
+<body>
+  <main>
+    <h2>팀원 소개</h2>
 
-      <!-- KNJ -->
-      <a href="knj/knj_index.html">
-        <div class="card">
-          <img src="./resources/knj_profile.png" alt="KNJ 사진" />
-          <div class="card-text">
-            <h3>KNJ</h3>
-            <p>한 줄 소개</p>
-          </div>
+    <!-- HSM -->
+    <a href="hsm/hsm_index.html">
+      <div class="card">
+        <img src="./resources/hsm_profile.png" alt="HSM 사진" />
+        <div class="card-text">
+          <h3>HSM</h3>
+          <p>왕왕왕초보개발자</p>
         </div>
-      </a>
+      </div>
+    </a>
 
-      <!-- KSH -->
-      <a href="ksh/ksh_index.html">
-        <div class="card">
-          <img src="./resources/ksh_profile.png" alt="KSH 사진" />
-          <div class="card-text">
-            <h3>KSH</h3>
-            <p>한 줄 소개</p>
-          </div>
+    <!-- JMJ -->
+    <a href="jmj/jmj_index.html">
+      <div class="card">
+        <img src="./resources/jmj_profile.png" alt="JMJ 사진" />
+        <div class="card-text">
+          <h3>JMJ</h3>
+          <p>개발자 장민주입니다. 현재 부재중입니다.</p>
         </div>
-      </a>
+      </div>
+    </a>
 
-      <!-- YSJ -->
-      <a href="ysj/ysj_index.html">
-        <div class="card">
-          <img src="./resources/ysj_profile.png" alt="YSJ 사진" />
-          <div class="card-text">
-            <h3>YSJ</h3>
-            <p>안녕하세요! 풀스택 개발자 윤소정입니다.</p>
-          </div>
+    <!-- KNJ -->
+    <a href="knj/knj_index.html">
+      <div class="card">
+        <img src="./resources/knj_profile.png" alt="KNJ 사진" />
+        <div class="card-text">
+          <h3>KNJ</h3>
+          <p>안녕하세요! 개발자 김남진입니다.</p>
         </div>
-      </a>
-    </main>
-    <footer></footer>
-  </body>
+      </div>
+    </a>
+
+    <!-- KSH -->
+    <a href="ksh/ksh_index.html">
+      <div class="card">
+        <img src="./resources/ksh_profile.png" alt="KSH 사진" />
+        <div class="card-text">
+          <h3>KSH</h3>
+          <p>상상을 구현하는 개발자가 되고싶은 김성현입니다!</p>
+        </div>
+      </div>
+    </a>
+
+    <!-- YSJ -->
+    <a href="ysj/ysj_index.html">
+      <div class="card">
+        <img src="./resources/ysj_profile.png" alt="YSJ 사진" />
+        <div class="card-text">
+          <h3>YSJ</h3>
+          <p>안녕하세요! 풀스택 개발자 윤소정입니다.</p>
+        </div>
+      </div>
+    </a>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
