개인 페이지 이모지 추가, main index.html text bold처리

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>자기소개 메인페이지</title>
   <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+
 </head>
 
 <body>
@@ -17,7 +19,7 @@
       <div class="card">
         <img src="./resources/hsm_profile.png" alt="HSM 사진" />
         <div class="card-text">
-          <h3>HSM</h3>
+          <h3>하성민</h3>
           <p>왕왕왕초보개발자</p>
         </div>
       </div>
@@ -28,7 +30,7 @@
       <div class="card">
         <img src="./resources/jmj_profile.png" alt="JMJ 사진" />
         <div class="card-text">
-          <h3>JMJ</h3>
+          <h3>장민주</h3>
           <p>개발자 장민주입니다. 현재 부재중입니다.</p>
         </div>
       </div>
@@ -39,7 +41,7 @@
       <div class="card">
         <img src="./resources/knj_profile.png" alt="KNJ 사진" />
         <div class="card-text">
-          <h3>KNJ</h3>
+          <h3>김남진</h3>
           <p>안녕하세요! 개발자 김남진입니다.</p>
         </div>
       </div>
@@ -50,7 +52,7 @@
       <div class="card">
         <img src="./resources/ksh_profile.png" alt="KSH 사진" />
         <div class="card-text">
-          <h3>KSH</h3>
+          <h3>김성현</h3>
           <p>상상을 구현하는 개발자가 되고싶은 김성현입니다!</p>
         </div>
       </div>
@@ -61,7 +63,7 @@
       <div class="card">
         <img src="./resources/ysj_profile.png" alt="YSJ 사진" />
         <div class="card-text">
-          <h3>YSJ</h3>
+          <h3>윤소정</h3>
           <p>안녕하세요! 풀스택 개발자 윤소정입니다.</p>
         </div>
       </div>
