--- a/knj/knj_index.html
+++ b/knj/knj_index.html
@@ -22,9 +22,9 @@
 
     <h2>취미</h2>
     <ul>
-      <li>게임</li>
-      <li>드라마 보기</li>
-      <li>웹소설 보기</li>
+      <li>게임 🕹️</li>
+      <li>드라마 보기 📺</li>
+      <li>웹소설 보기 📔</li>
       <!-- 추가할 내용 있다면 추가하시면 될 것 같습니다. -->
     </ul>
 
