--- a/ksh/ksh_index.html
+++ b/ksh/ksh_index.html
@@ -23,9 +23,9 @@
 
 		<h2>취미</h2>
 		<ul>
-			<li>축구 보기</li>
-			<li>야구 보기</li>
-			<li>롤&롤토체스</li>
+			<li>축구 보기 ⚽</li>
+			<li>야구 보기 ⚾</li>
+			<li>롤&롤토체스 🕹️</li>
 		</ul>
 
 		<h4>팀원에게 한마디</h4>
