--- a/ysj/ysj_index.html
+++ b/ysj/ysj_index.html
@@ -23,9 +23,9 @@
 
     <h2>취미</h2>
     <ul>
-      <li>ott 시청</li>
-      <li>운동</li>
-      <li>게임</li>
+      <li>ott 시청 📺</li>
+      <li>운동 💪</li>
+      <li>게임 🕹️</li>
     </ul>
 
     <h4>팀원에게 한마디</h4>
