--- a/hsm/hsm_index.html
+++ b/hsm/hsm_index.html
@@ -22,9 +22,9 @@
 
     <h2>취미</h2>
     <ul>
-      <li>게임</li>
-      <li>웹툰 감상</li>
-      <li>애니메이션 감상</li>
+      <li>게임 🕹️</li>
+      <li>웹툰 감상 🍿</li>
+      <li>애니메이션 감상 📺</li>
     </ul>
 
     <h4>팀원에게 한마디</h4>
