github icon 경로 변경

--- a/ksh/ksh_index.html
+++ b/ksh/ksh_index.html
@@ -51,7 +51,7 @@
 
 			<a class="footer__sns-link" href="https://github.com/Obebe-creator" target="_blank"
 				rel="nooperner noreferrer" aria-label="Github">
-				<img src="github_icon.png" alt="footer-sns-icon" />
+				<img src="../resources/github_icon.png" alt="footer-sns-icon" />
 			</a>
 		</div>
 	</div>
