--- a/knj/knj_index.html
+++ b/knj/knj_index.html
@@ -49,7 +49,7 @@
 
       <a class="footer__sns-link" href="https://github.com/knj980425" target="_blank" rel="nooperner noreferrer"
         aria-label="Github">
-        <img src="github_icon.png" alt="footer-sns-icon" />
+        <img src="../resources/github_icon.png" alt="footer-sns-icon" />
       </a>
     </div>
   </div>
